[package]
name = "typed-bytesize"
version = "0.1.0"
edition = "2021"
authors = ["Collide <three-dim-sky@foxmail.com>"]
description = "Represent bytesize in decimal or binary prefix unit"
documentation = "https://github.com/TD-Sky/typed-bytesize"
repository = "https://github.com/TD-Sky/typed-bytesize"
readme = "README.md"
categories = ["value-formatting", "parser-implementations"]
keywords = ["byte", "unit", "units", "typed"]
license = "MIT"
include = ["src/**/*", "Cargo.toml", "LICENSE*", "README.md"]

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
serde = ["dep:serde"]
